--- a/trydjango/src/trydjango/products/templates/products/product_create.html
+++ b/trydjango/src/trydjango/products/templates/products/product_create.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
-<form action="http://www.google.com/search" method="GET">
-    <input type="text" name="q" placeholder="your search"/>
+<form action="." method="POST">{% csrf_token %}
+    {{ form.as_p }}  
     <input type='submit' value="Save" />
 </form>
 
 {% endblock %}
+
+
 
