--- a/trydjango/src/trydjango/products/templates/products/product_create.html
+++ b/trydjango/src/trydjango/products/templates/products/product_create.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-<form action="http://www.google.com/search" method="GET">
-    <input type="text" name="q" placeholder="your search"/>
+<form action="https://www.google.com/search" method="GET">
+    <input type="text" name="q" placeholder="Your search"/>
     <input type='submit' value="Save" />
 </form>
 
